<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Notes</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="title_hint">Title</string>
    <string name="content_hint">Start writing…</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="no_notes">No notes yet. Tap + to create one.</string>
    <string name="delete_confirmation">Delete this note?</string>
    <string name="cancel">Cancel</string>
    <string name="search_notes">Search notes</string>
</resources>
